--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         </activity>
         <activity android:name=".TrackActivity"
             android:parentActivityName=".MainActivity"/>
+        <activity android:name=".PopularActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".FavouriteActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".SearchActivity"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
