--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -31,5 +32,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:design:28.0.0'
-
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
